updated html structure

--- a/src/index.html
+++ b/src/index.html
@@ -23,13 +23,17 @@
   </head>
   <body>
     <load ="partials/header.html" />
-    <load ="partials/hero.html" />
-    <load ="partials/about-us.html" />
-    <load ="partials/our-lesson.html" />
-    <load ="partials/proposal-to-leave-application.html" />
-    <load ="partials/our-teachers.html" />
-    <load ="partials/leave-application.html" />
-    <load ="partials/reviews.html" />
+
+    <main>
+      <load ="partials/hero.html" />
+      <load ="partials/about-us.html" />
+      <load ="partials/our-lesson.html" />
+      <load ="partials/proposal-to-leave-application.html" />
+      <load ="partials/our-teachers.html" />
+      <load ="partials/leave-application.html" />
+      <load ="partials/reviews.html" />
+    </main>
+
     <load ="partials/footer.html" />
 
     <script type="module" src="/main.js"></script>
