add our lessons

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
     <main>
       <load ="partials/hero.html" />
       <load ="partials/about-us.html" />
-      <load ="partials/our-lesson.html" />
+      <load ="partials/our-lessons.html" />
       <load ="partials/proposal-to-leave-application.html" />
       <load ="partials/our-teachers.html" />
       <load ="partials/leave-application.html" />
